--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "del": "^5.1.0",
     "electron": "^9.1.2",
     "electron-builder": "^22.8.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
